--- a/Owin.Web/Views/Index/IndexView.cshtml
+++ b/Owin.Web/Views/Index/IndexView.cshtml
@@ -4,3 +4,8 @@
     @Model.Title
 </h2>
 <p>It's work!</p>
+<form action="/" method="POST">
+    <input type="hidden" name="id" value="1"/>
+    <input type="hidden" name="name" value="Nemo Nobody" />
+    <input type="submit" value="Submit"/>
+</form>
