--- a/Owin.Web/Views/Index/IndexView.cshtml
+++ b/Owin.Web/Views/Index/IndexView.cshtml
@@ -3,6 +3,9 @@
 <head>
     <script type="text/javascript" src="//vk.com/js/api/openapi.js?98"></script>
 
+    
+
+
     <script type="text/javascript">
         VK.init({ apiId: 3812214, onlyWidgets: true });
     </script>
@@ -11,11 +14,30 @@
     <h2>
         @Model.Title
     </h2>
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=381036251935291";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
 
+    <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+    <script>
+        !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');
+    </script>
+
+    <!-- Put this div tag to the place, where the Like block will be -->
     <div id="vk_like"></div>
     <script type="text/javascript">
         VK.Widgets.Like('vk_like');
     </script>
+
+    <div class="fb-like" data-href="http://developers.facebook.com/docs/reference/plugins/like" data-width="200" data-layout="button_count" data-show-faces="false" data-send="false"></div>
+
+    
 
     <p>It's work!</p>
     <form action="/" method="POST">
