--- a/Owin.Web/Views/Index/IndexView.cshtml
+++ b/Owin.Web/Views/Index/IndexView.cshtml
@@ -5,7 +5,11 @@
 
     
 
-
+    <style>
+        div {
+            display: inline-block;
+        }
+    </style>
     <script type="text/javascript">
         VK.init({ apiId: 3812214, onlyWidgets: true });
     </script>
