--- a/Owin.Web/Views/Index/IndexView.cshtml
+++ b/Owin.Web/Views/Index/IndexView.cshtml
@@ -36,7 +36,7 @@
     <!-- Put this div tag to the place, where the Like block will be -->
     <div id="vk_like"></div>
     <script type="text/javascript">
-        VK.Widgets.Like('vk_like');
+        VK.Widgets.Like('vk_like', { type: "mini" });
     </script>
 
     <div class="fb-like" data-href="http://developers.facebook.com/docs/reference/plugins/like" data-width="200" data-layout="button_count" data-show-faces="false" data-send="false"></div>
